--- a/.ebextensions./staticfiles.config
+++ b/.ebextensions./staticfiles.config
@@ -1,4 +1,3 @@
 option_settings:
   aws:elasticbeanstalk:container:nodejs:staticfiles:
-
-    /client/build/public: /public
+    /public: /client/build/public
